<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/app_large_icon_size"
        android:layout_height="@dimen/app_large_icon_size"
        android:contentDescription="@string/appstr_nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/ic_store" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/TextContent.Bold"
        android:textColor="@color/white"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/appstr_nav_header_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextContent.Bold"
        android:textColor="@color/white"
        android:text="@string/appstr_nav_header_subtitle" />

</LinearLayout>
