<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context=".view.admin.AdminMainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_title"
                style="@style/TextTitle.Bold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/appstr_app_name"
                android:textAlignment="center"
                android:textColor="@color/white" />

        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/app_default_padding">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/img_icon"
                    android:layout_width="@dimen/app_default_icon_size"
                    android:layout_height="@dimen/app_default_icon_size"
                    app:srcCompat="@drawable/ic_backup" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_icon"
                    android:layout_toRightOf="@+id/img_icon"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/app_default_padding"
                    android:paddingLeft="@dimen/app_default_padding">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextContent.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/appstr_backup_data_desc"
                        android:textColor="@color/light_blue800"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_mini_vertical_margin"
                        android:text="@string/appstr_backup_sales_data_desc"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lastdate_local_backup"
                        style="@style/TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/appstr_name"
                        android:textColor="@color/black"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/lastdate_google_backup"
                        style="@style/TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/appstr_name"
                        android:textColor="@color/black"/>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/backup_btn"
                        style="@style/Button.Login"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/appstr_backup"
                        android:textStyle="bold"/>
                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@id/img_icon"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/blue_grey50"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/app_default_padding">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@id/img_icon"
                    android:layout_width="@dimen/app_default_icon_size"
                    android:layout_height="@dimen/app_default_icon_size"
                    app:srcCompat="@drawable/ic_google_drive" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/img_icon"
                    android:layout_toRightOf="@+id/img_icon"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/app_default_padding"
                    android:paddingLeft="@dimen/app_default_padding">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextContent.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:text="@string/appstr_google_drive_settings"
                        android:textColor="@color/light_blue800"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/TextContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_mini_vertical_margin"
                        android:text="@string/appstr_google_drive_desc"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/schedule_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/layout_selector_borderless"
                android:paddingStart="@dimen/app_default_icon_size"
                android:paddingLeft="@dimen/app_default_icon_size"
                android:paddingTop="@dimen/activity_mini_horizontal_margin"
                android:paddingBottom="@dimen/activity_mini_horizontal_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:maxLines="1"
                    android:clickable="false"
                    android:text="@string/appstr_backup_schedule_title"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent"
                    android:id="@+id/schedule_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/appstr_backup_schedule_title"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/layout_selector_borderless"
                android:paddingStart="@dimen/app_default_icon_size"
                android:paddingLeft="@dimen/app_default_icon_size"
                android:paddingTop="@dimen/activity_mini_horizontal_margin"
                android:paddingBottom="@dimen/activity_mini_horizontal_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:maxLines="1"
                    android:clickable="false"
                    android:text="@string/appstr_backup_account_title"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent"
                    android:id="@+id/account_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/appstr_backup_account_title"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/backup_over_media_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:clickable="true"
                android:background="@drawable/layout_selector_borderless"
                android:paddingStart="@dimen/app_default_icon_size"
                android:paddingLeft="@dimen/app_default_icon_size"
                android:paddingTop="@dimen/activity_mini_horizontal_margin"
                android:paddingBottom="@dimen/activity_mini_horizontal_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent.Bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:maxLines="1"
                    android:clickable="false"
                    android:text="@string/appstr_backup_over_media_title"
                    android:textColor="@color/black"/>
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextContent"
                    android:id="@+id/over_media_type_display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:text="@string/appstr_backup_over_media_title"/>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>